force-app/main/default/objects/custom_create30__c/custom_create30__c.object-meta.xml
<CustomObject>
    <label>Custom created object30</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects30</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>