force-app/main/default/objects/custom_create30__c/fields/custom_create_30field510__c.field-meta.xml
<CustomField>
    <fullName>custom_create_30field510__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 30field510</label>
    <type>Checkbox</type>
</CustomField>