force-app/main/default/objects/custom_create30__c/fields/custom_create_30field548__c.field-meta.xml
<CustomField>
    <fullName>custom_create_30field548__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 30field548</label>
    <type>Checkbox</type>
</CustomField>